--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
-    "name": "opensoft/doctrine-postgres-types",
+    "name": "sryabov/doctrine-postgres-types",
     "description": "Provide some common postgres types for doctrine",
     "license": "MIT",
     "authors": [
         {
             "name": "Richard Fullmer",
             "email": "richard.fullmer@opensoftdev.com"
+        },
+        {
+            "name": "Sergey Ryabov",
+            "email": "sryabov@mhds.ru"
         }
     ],
     "require": {
